[package]
name = "torproject"
version = "0.0.4"
edition = "2021"
description = "Tor Project for Rust"
categories = ["web-programming", "network-programming"]
homepage = "https://github.com/EstebanBorai/torproject"
repository = "https://github.com/EstebanBorai/torproject"
readme = "README.md"
keywords = ["tor", "torproject", "downloader", "api"]
license = "MIT OR Apache-2.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[dependencies]
anyhow = "1.0.95"
dirs = "5.0.1"
flate2 = "1.0.35"
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tar = "0.4.43"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1.41"
scraper = "0.22.0"
semver = "1.0.20"